# WarehouseSimulation

./: CMakeLists.txt
include/core/: Config.h  DataManager.h  Simulation.h  Warehouse.h  WarehouseController.h
include/models/: Order.h  Product.h  Shipment.h  Store.h  Supplier.h
include/services/: DiscountService.h  ExpirationService.h  OrderGenerator.h  OrderProcessor.h  StatisticsService.h  SupplierService.h
include/utils/: RandomGenerator.h
src/: CMakeLists.txt
src/core/: CMakeLists.txt  Config.cpp  DataManager.cpp  Simulation.cpp  Warehouse.cpp  WarehouseController.cpp
src/models/: CMakeLists.txt  Order.cpp  Product.cpp  Shipment.cpp  Store.cpp  Supplier.cpp
src/services/: CMakeLists.txt  DiscountService.cpp  ExpirationService.cpp  OrderGenerator.cpp  OrderProcessor.cpp  StatisticsService.cpp  SupplierService.cpp
src/utils/: CMakeLists.txt  RandomGenerator.cpp
